# freeswitch-esl-rs

./: Cargo.toml  README.md
examples/: dump-events.rs
examples/dump-events/: Cargo.toml
examples/dump-events/src/: main.rs
src/: blocking_client.rs  data.rs  lib.rs
