[package]
name = "freeswitch-esl-rs"
version = "0.1.1"
authors = ["Jovany Leandro G.C <bit4bit@riseup.net>"]
edition = "2021"
description = "Freeswitch ESL"
readme = "README.md"
homepage = "http://chiselapp.com/user/bit4bit/repository/freeswitch-esl-rs/index"
repository = "http://chiselapp.com/user/bit4bit/repository/freeswitch-esl-rs/index"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
queues = "1.0.2"
urldecode = "0.1.1"